@startuml

title UC06 - Especificar Tarefa
left to right direction

class Plataforma <<Singleton>> {
    -String designacao
}

class EspecificarTarefaUI {
    --
    allCategorias()
    novaTarefa(ref, designacao, descInformal, descTecnica, duracao, custo, catCod)
    registaTarefa(t)
}

class EspecificarTarefasCTRL {
    --
    novaTarefa(ref, designacao, descInformal, descTecnica, duracao, custo, cat, colab)
    registaTarefa(t)
}

class RepositorioTarefa <<Singleton>> {
    List<Tarefa> tarefas
    --
    create(ref, designacao, descInformal, descTecnica, duracao, custo, cat, colab)
    valida(t)
    add(t)
}

class RepositorioCategoria <<Singleton>>{
    -List<Categoria>
    -categoria
    --
    allCategorias()
    categoria(catCod)
}

class RepositorioOrganizacao <<Singleton>> {
    -List<Organizacao>
    -organizacao
    --
    -allOrganizacoes()
    -organizacaoByNif(NIF)
}

class RepositorioColaborador <<Singleton>> {
    List<Colaborador> listaColab
    --
    allColaboradores()
    colaboradorByEmail(email)
}

class Organizacao {
    -String nome
    -String NIF
    -EnderecoPostal enderecoPostal
    -Website website
    -String telefone
    -Email email
}

class Colaborador {
    -String funcao
    -String telefone
    -Organizacao organizacao
}

class Tarefa {
    -String referencia
    -String designacao
    -String descInformal
    -String descTecnica
    -Integer duracaoEst
    -Double custoEst
    -Plataforma plataforma
}

class Utilizador {
    -String nome
    -Email email
    -Password password
}

class Categoria {
    -String id
    -String descricao
}

class Email {
    -String email
    --
    validaEMail(email)
}

class Password {
    -String password
    --
    -validaPassword(password)
}

Colaborador"0..1" --|> "1"Utilizador
EspecificarTarefaUI ..> EspecificarTarefasCTRL
EspecificarTarefasCTRL ..> Plataforma
EspecificarTarefasCTRL ..> RepositorioCategoria
EspecificarTarefasCTRL ..> RepositorioTarefa
EspecificarTarefasCTRL ..> RepositorioOrganizacao
RepositorioOrganizacao"1" --> "1.."Organizacao
EspecificarTarefasCTRL ..> RepositorioColaborador
RepositorioColaborador"1" --> "1..*"Colaborador
RepositorioTarefa"1" --> "1..*"Tarefa
RepositorioCategoria"1" --> "1..*"Categoria
Plataforma <-- Tarefa
Utilizador"1" --> "1"Email
Utilizador"1" --> "1"Password

@enduml